[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchlib"
version = "0.1.0"
description = "A library for running automated code agent benchmarks"
readme = "CLAUDE.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
